
[tool.poetry]
name = "AnalysisGUI"
version = "0.1.1"
description = "AC/DC cell analysis"
authors = ["Victor Ionescu <vionescu@biodyn.ro>"]
license = "MIT"
readme = "README.md"
packages = [{include = "AnalysisGUI", from = "src"}]
#include = ["/rust_packages/**"]
[tool.poetry.build]
script = "build.py"
generate-setup-file = false


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "~1.26"
pyqt5 = "^5.15"
pyqtgraph = "^0.13.7"
opencv-python = "^4.11.0.86"
matplotlib = "^3.10.1"
cython = ">=3.0.12"
natsort = "^8.4.0"
aicsimageio = "^4.14.0"
omnipose = { git = "https://github.com/kevinjohncutler/omnipose.git", rev = "18ece331bc4d468a670b2c6df8eb1e70bd0f1120" }
scipy = "~1.11"
loky = "^3.5.1"
dill = "^0.3.9"
networkit = "<11.1.post1"
sif-parser = "^0.3.5"
maturin = "^1.8.7"

[tool.poetry-pyinstaller-plugin]
# Disable [tool.poetry.include] and use plugin settings instead
exclude-include = true

[tool.poetry-pyinstaller-plugin.scripts]
startGUI = 'src/AnalysisGUI/__main__.py'
use-poetry-install = true
windowed = true
hidden_import = ["cellpose_omni","xsdata_pydantic_basemodel.hooks"]

[tool.poetry-pyinstaller-plugin.collect]
# Collect all submodules, data files & binaries for 'package_A' and 'package_B'
all = ['cellpose_omni','xsdata_pydantic_basemodel.hooks']

[tool.poetry.scripts]   
startGUI = 'AnalysisGUI.__main__:runApp'

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"

[build-system]
requires = ["poetry-core","Cython","setuptools","numpy","pip","maturin"]
build-backend = "poetry.core.masonry.api"
